[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibevox"
version = "0.1.0"
description = "Easy audio and video transcription powered by Microsoft VibeVoice ASR"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "vibevoice",
    "transformers>=4.51.3",
    "torch",
    "accelerate",
    "typer[all]>=0.9",
    "rich>=13.0",
    "huggingface-hub",
    "numpy",
]

[project.scripts]
vibevox = "vibevox.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["vibevox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: requires model download and GPU",
]
